static/css/style.css
/* ... */
.post-title, .post-topic {
    font-size: 2.4rem;
}

.post-topic {
    margin: 0;
}

.post-text{
   overflow: hidden;
   position: relative;
   background: white;
   max-height: 12.5rem;
}

.expand-post {
    display: none;
    position: relative;
    width: auto;
    text-decoration: none;
    color: #7697F9;
    font-weight: 400;
    font-size: 1.6rem;
    margin: 0;
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    top: -3rem;
    margin-right: -1rem;
    margin-left: -1rem;
    padding: .5rem;
    z-index: 5;
    background: rgba(255, 255, 255, .95);
    justify-content: space-between;
}

.expand-post i {
    display: flex;
    margin:auto 0;
}

.post-text, .post-author {
    font-size: 1.6rem;
}

.post-text,
.post-title {
    padding-top: .5rem;
}

.post-title-options {
    line-height: 2.4rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: relative;
}

.post-title-options button {
    display: flex;
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    background: none;
    font-size: 2rem;
    justify-content: center;
    align-items: center;
}

.post-title-options button:active {
    font-size: 2.2rem;
}

.post-bottom {
    display: flex;
    width: 100%;
    justify-content: space-between;
    bottom: 1rem;
    font-size: 1.4rem;
    margin: 0;
}

.post-bottom button{
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    background: none;
    color: #212529;
}

.post-bottom a{
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    background: none;
    color: #212529;
}

.post-edit-options {
    display: none;
    position:absolute;
    top: 90%;
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
    font-size: 2rem;
    flex-direction: column;;
    right: 0;
    text-align: right;
    width: 14rem;
    padding: 1rem;
}

.post-option-dropdown{
    font-size: 2.4rem;
    min-height: 0;
}

.post-edit-options i {
    margin-left: .5rem;
}

.post-edit-options a, 
.post-edit-options button {
    -webkit-appearance: none;
    -moz-appearance: none;
    border: none;
    background: none;
    font-size: 2rem;
    padding: .25rem 0;
    display: flex;
    justify-content: space-between;
    text-decoration: none;
    color: #ffffff;
}

.post-edit-options h4,
.post-edit-options i {
    margin: 0;
    display: flex;
    font-size: 1.6rem;
}

.post-date {
    display: flex;
    margin: 0;
}

.post-pluses {
    padding: 0;
    color: #ffffff;
    font-size: 1.4rem;
}

.sidebar i,
.profile-comments-sidebar i {
    padding: 0;
    color: #ffffff;
    font-size: 2.5rem;
}

.card-body.row {
    background-color: #ffffff;
    max-width: 100%;
    height: auto;
    padding: 0;
    margin: 0;
    box-shadow: .4rem .4rem .4rem rgba(0, 0, 0, .25);
}

.comment-div {
    margin: .5rem auto; 
    width: 80%;
    display: flex;
    flex-direction: column;
}

.post-comment {
    font-size: 1.6rem;
}

.post-comment,
.post-comment-author {
    display: flex;
}

.post-comment-author {
    padding-left: 6rem;
    justify-content: flex-start;
    color: #6c757d;
}

.post-comment-container {
    display:none;
    width: 100%;
    margin: 0 auto;
    flex-direction: column;
}

#post-comment-container {
    display: none;
}

.comment-post-link {
    padding: .5rem;
}

.post-comments, .post-votes  {
    text-align: center;
    margin: 0;
    padding: .5rem;
}

.comment-form-textarea {
    resize: none;
    font-size: 1.4rem;
}

.create-comment-form {
    display: flex;
    flex-direction: column;
    display: none;
    width: 100%;
    padding: 0 3rem;
    margin: 2rem 0;
}

.post-id-target {
    position: absolute;
    top: -8rem;
}

.hvr-icon-spin {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
}

.hvr-icon-spin .hvr-icon {
  -webkit-transition-duration: 1.5;
  transition-duration: 1.5s;
  -webkit-transition-property: transform;
  transition-property: transform;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
}

.hvr-icon-spin:hover .hvr-icon, .hvr-icon-spin:focus .hvr-icon, .hvr-icon-spin:active .hvr-icon {
  -webkit-transform: rotate(360deg);
  transform: rotate(360deg);
}

.create-post-action-button{
    position: relative;
    background-color: #7697f9;
    width: 4.8rem;
    height: 4.8rem;
    border-radius: 100%;
    border: none;
    outline: none;
    color: #ffffff;
    font-size: 2.4rem;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    transition: .3s;  
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    padding: 0;
}

.create-post-action-button:active,
.create-post-action-button:focus,
.create-post-action-button:hover {
    transform: scale(1.1);
}

.create-post-action-button a {
    position:relative;
    display: inline-block;
    color: #ffffff;
    text-decoration: none;
    width: 4.8rem;
    height: 4.8rem;
    border-radius: 50%;
}

.create-post-action-button a i {
    padding-top: 1.2rem;
}

.create-post-button-container {
    position: fixed;
    width: 5rem;
    right: 5vw;
    bottom: 15vh;
}

#floating-create-post-label {
    width: auto;
    height: 2.6rem;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    top: 6rem;
    left: -50%;
    white-space: nowrap;
    display: none;
    position: relative;
    color: #ffffff;
    line-height: 1;
    font-size: 1.6rem;
    padding: .5rem 1rem;
    background-color: #7697F9;
}

.absolute-div {
    display: flex;
    position: absolute;
}

.create-post-action-button:hover + #floating-create-post-label {
    display: flex;
}

/* Topic Styling */
.all-topics-sidebar {
    background-color: #ffffff;
}

.all-topics-sidebar h5 {
    color: #1B263B;
}

.sports {
    color: #0075F2;
}

.sports-sidebar {
    background-color: rgba(0, 117, 242);
}
/* ... */

